--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
 
     "git": "^0.1.5",
 
-    "pug": "^3.0.2"
+    "http": "^0.0.1-security",
+
+    "pug": "^3.0.2",
+
+    "socket.io": "^4.5.1"
 
   }
 
